--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
